force-app/main/default/objects/Claim_Submission_Setting__mdt/Claim_Submission_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Clearinghouse adapter and submitter configuration. Secrets remain in Named and External Credentials.</description>
    <label>Claim Submission Setting</label>
    <pluralLabel>Claim Submission Settings</pluralLabel>
</CustomObject>