force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName><defaultValue>false</defaultValue><fieldManageability>SubscriberControlled</fieldManageability><label>Active</label><type>Checkbox</type>
</CustomField>