force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName><description>Ten-digit submitter contact phone sent with claims.</description><externalId>false</externalId><fieldManageability>SubscriberControlled</fieldManageability><label>Contact Phone</label><length>20</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>