force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName><externalId>false</externalId><fieldManageability>SubscriberControlled</fieldManageability><label>Named Credential</label><length>80</length><required>true</required><type>Text</type><unique>false</unique>
</CustomField>