force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName><externalId>false</externalId><fieldManageability>SubscriberControlled</fieldManageability><label>Provider Name</label><length>80</length><required>true</required><type>Text</type><unique>false</unique>
</CustomField>