force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Submitter_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Identifier__c</fullName><description>Optional payer-assigned ETIN. When blank, Stedi uses the billing provider NPI.</description><externalId>false</externalId><fieldManageability>SubscriberControlled</fieldManageability><label>Submitter Identifier</label><length>80</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>