force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Name__c</fullName><externalId>false</externalId><fieldManageability>SubscriberControlled</fieldManageability><label>Submitter Name</label><length>60</length><required>true</required><type>Text</type><unique>false</unique>
</CustomField>