force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Usage_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Usage_Indicator__c</fullName><defaultValue>"T"</defaultValue><fieldManageability>SubscriberControlled</fieldManageability><label>Usage Indicator</label><required>true</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>T</fullName><default>true</default><label>Test</label></value>
        <value><fullName>P</fullName><default>false</default><label>Production</label></value>
    </valueSetDefinition></valueSet>
</CustomField>