force-app/main/default/objects/Claim_Submission_Setting__mdt/fields/Webhook_Secret_Hash__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret_Hash__c</fullName>
    <description
  >Optional SHA-256 hex digest of the shared secret required in the X-LogicEMR-Webhook-Secret header. The raw secret must not be stored in Salesforce metadata.</description>
    <label>Webhook Secret Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>